<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/constrain_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_1"
                />

            <Button
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_5" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_6" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_7" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_8" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_9" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="64dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/gray"
                android:text="@string/button_10" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>