<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="64dp"
        android:backgroundTint="@color/gray"
        android:text="@string/button_1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="64dp"
        android:backgroundTint="@color/gray"
        android:text="@string/button_2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="64dp"
        android:backgroundTint="@color/gray"
        android:text="@string/button_3"/>

</LinearLayout>