<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/logo"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="88dp"
        android:layout_marginStart="113.1dp"
        android:layout_marginEnd="113.1dp"
        android:layout_marginBottom="548.7dp"
        android:src="@drawable/fill_1"
        android:backgroundTint="@color/transparent"
        />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="196dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginEnd="62.5dp"
        android:layout_marginBottom="431dp"
        android:background="@drawable/username_password_edit_text"
        android:textSize="12sp"
        android:hint="@string/username"
        android:paddingStart="20dp"
        android:singleLine="true"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/username_password_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et"
        android:layout_marginStart="62.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="62.5dp"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/or_connect_with"
        android:translationX="-5dp"
        android:translationY="-16dp"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        android:layout_marginTop="22.5dp"
        />

    <TextView
        android:id="@+id/remember_me_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/password_et"
        app:layout_constraintStart_toStartOf="@id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="135.5dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/remember_me"
        android:textSize="12sp"
        android:textColor="@color/remember_me_forgot_password"
        />

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/remember_me_tv"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        android:layout_marginStart="37.5dp"
        android:layout_marginTop="22.5dp"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:textColor="@color/remember_me_forgot_password"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@id/remember_me_tv"
        app:layout_constraintStart_toStartOf="@id/remember_me_tv"
        app:layout_constraintTop_toBottomOf="@+id/remember_me_tv"
        android:layout_marginTop="22.5dp"
        android:layout_marginStart="135.5dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textSize="12sp"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/or_connect_with_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        android:layout_marginTop="26.5dp"
        android:layout_marginStart="80.5dp"
        android:layout_marginEnd="80.5dp"
        android:text="@string/or_connect_with"
        android:textSize="12sp"
        android:textColor="@color/or_connect_with"/>

    <ImageButton
        android:id="@+id/twitter_im_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="@+id/or_connect_with_tv"
        app:layout_constraintTop_toBottomOf="@+id/or_connect_with_tv"
        android:layout_marginStart="49.5dp"
        android:layout_marginTop="29.5dp"
        android:src="@drawable/tw"/>

    <ImageButton
        android:id="@+id/facebook_im_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="@+id/or_connect_with_tv"
        app:layout_constraintTop_toBottomOf="@+id/or_connect_with_tv"
        android:layout_marginEnd="49.5dp"
        android:layout_marginTop="29.5dp"
        android:src="@drawable/fb"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="582.5dp"
        android:layout_marginStart="62.5dp"
        android:layout_marginEnd="62.5dp"
        android:layout_marginBottom="44.5dp"
        android:background="@drawable/sign_up_button"
        android:text="@string/signup_btn"
        android:textSize="12sp"
        android:textAllCaps="false"
        android:textColor="@color/signup_btn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>